--- a/content/blog/nz-oia-guide.org
+++ b/content/blog/nz-oia-guide.org
@@ -4,7 +4,7 @@ tags: ["government", "guide", "nz", "oia"]
 title: "A brief guide to OIAs in New Zealand"
 ---
 
-I was browsing [Hacker News](https://news.ycombinator.com) earlier this week and came across an interesting post called [Using FOIA Data and Unix to halve major source of parking tickets](http://mchap.io/using-foia-data-and-unix-to-halve-major-source-of-parking-tickets.html). As you can imagine, the post is [exactly what it says on the tin](https://en.wikipedia.org/wiki/Does_exactly_what_it_says_on_the_tin) and got me inspired to do some own data wrangling of my own.
+I was browsing [Hacker News](https://news.ycombinator.com) earlier this week and came across an interesting post called [[http://mchap.io/using-foia-data-and-unix-to-halve-major-source-of-parking-tickets.html][Using FOIA Data and Unix to halve major source of parking tickets]]. As you can imagine, the post is [[https://en.wikipedia.org/wiki/Does_exactly_what_it_says_on_the_tin][exactly what it says on the tin]] and got me inspired to do some own data wrangling of my own.
 
 A few days later, a coworker got a parking ticket and I was reminded of that post so I told them the story. They seemed to think it was a neat idea but didn't have a great understanding of the Official Information Act process. I mean, just look at that name! It sounds all legal and fancy but really, it's actually very straight forward (and arguably kinda fun).
 
@@ -12,23 +12,23 @@ I'm no expert myself but I can at least show you where to start. I actually have
 
 {{< contents >}}
 
-## Some caveats
+* Some caveats
 
-It's worth noting that while this guide is specifically aimed at New Zealanders, some of the tips can possibly apply to your own country. I should note that New Zealand is ranked #1 in [Transparency International's Corruption Perception Index](https://www.transparency.org/country/NZL) so as you can imagine, there's generally no hassle with requesting information from our government.
+It's worth noting that while this guide is specifically aimed at New Zealanders, some of the tips can possibly apply to your own country. I should note that New Zealand is ranked #1 in [[https://www.transparency.org/country/NZL][Transparency International's Corruption Perception Index]] so as you can imagine, there's generally no hassle with requesting information from our government.
 
 It should go without saying that a less transparent, or even citizen-hostile government is going to be an entirely different kettle of fish.
 
-## Official Information what?
+* Official Information what?
 
 Ah yes, right. Maybe you've heard of the term FOIA or OIA but haven't really got an idea of what it is or where the ability originates from. Is it a service granted from the kindness of our governmental overlords? Hah! Well... it is!
 
-The Official Information Act of 1982, readable [here](http://www.legislation.govt.nz/act/public/1982/0156/latest/DLM64785.html), is actually a replacement for the [Official Secrets Act 1951](http://www.nzlii.org/nz/legis/hist_act/osa19511951n77183/). I can't say I was aware of it before writing this post but sharing government information was a criminal offense! Wikipedia only mentions this in passing but after digging a bit, I believe the particular section that applied was 6(1)(a). You can see it below although I've cut out some bits so it's not just a huge wall of text.
+The Official Information Act of 1982, readable [[http://www.legislation.govt.nz/act/public/1982/0156/latest/DLM64785.html][here]], is actually a replacement for the [[http://www.nzlii.org/nz/legis/hist_act/osa19511951n77183/][Official Secrets Act 1951]]. I can't say I was aware of it before writing this post but sharing government information was a criminal offense! Wikipedia only mentions this in passing but after digging a bit, I believe the particular section that applied was 6(1)(a). You can see it below although I've cut out some bits so it's not just a huge wall of text.
 
 > 6 (1) If any person, having in his possession or control ... any sketch, plan, model, article, note, document, or information ... which has been entrusted in confidence to him by any person holding office under His Majesty or under the Government of any other country, or which he has obtained or to which he has had access owing to his position ... (a) Communicates the code word, password, sketch, plan, model, article, note, document, or information to any person, other than a person to whom he is authorized to communicate it ... he commits an offence against this Act. --- Section 6 (1),  New Zealand Official Secrets Act 1951
 
 The idea of information belonging to "the Queen and her advisors" slowly seemed like a bunch of nonsense and as a result, the Official Information Act was born. In short, it allows anyone present in New Zealand (citizen or visitor) to request, surprise, information from any government Minister, department or organization. That's basically all it boils down to.
 
-## What can I request?
+* What can I request?
 
 Generally speaking, there's no limit on what you can request but as with most parts of life, just because you ask doesn't mean you shall receive.
 
@@ -45,7 +45,7 @@ There are some cases where the requestee can deny your request but it has to be 
 > (e) to damage seriously the economy of New Zealand by disclosing prematurely decisions to change or continue government economic or financial policies relating to— (i) exchange rates or the control of overseas exchange transactions: (ii) the regulation of banking or credit: (iii) taxation: (iv) the stability, control, and adjustment of prices of goods and services, rents, and other costs, and rates of wages, salaries, and other incomes: (v) the borrowing of money by the Government of New Zealand: (vi) the entering into of overseas trade agreements.
 
 
-## Where to make a request (the hard, secret way)
+* Where to make a request (the hard, secret way)
 
 So, you want to learn a thing or two, eh?
 
@@ -55,15 +55,15 @@ Now that you've got a goal in mind, the next step is just to contact the agency 
 
 For example: a Google Search for `ministry of justice oia` brings up their [OIA request page](https://www.justice.govt.nz/about/official-information-act-requests/). It should be as straight forward as following the instructions from there. Some agencies, such as NZ Police, may ask for proof of citizenship in certain cases as I understand but you'll likely not run into that issue. Similarly, some agencies may charge for very large requests but as I understand, it's fairly rare for that to occur.
 
-## Where to make a request (the easy, public way)
+* Where to make a request (the easy, public way)
 
-There's actually an easier way to make OIA requests thanks to the fine folks over at [FYI.org.nz](https://fyi.org.nz). Simply pick an agency, fill in your request and the rest is sorted from there. Your request is given a page, not unlike a forum thread, and responses show up when they come back. Other users can give you advice if they think the response you got was crap and you'll also be given the option to forward your response to the [Ombudsman](http://www.ombudsman.parliament.nz/) should you choose to dispute it.
+There's actually an easier way to make OIA requests thanks to the fine folks over at [[https://fyi.org.nz][FYI.org.nz]]. Simply pick an agency, fill in your request and the rest is sorted from there. Your request is given a page, not unlike a forum thread, and responses show up when they come back. Other users can give you advice if they think the response you got was crap and you'll also be given the option to forward your response to the [[http://www.ombudsman.parliament.nz/][Ombudsman]] should you choose to dispute it.
 
 The only catch is that all requests are public, so as to cut down on duplicate requests. Don't worry, none of your information is public, just your first name. The initial query, and any replies you send, are sent through FYI's own email address which acts as a middle man on your behalf.
 
 If you'd like to do a project surrounding public utilities, persuing past requests can be a great way to get ideas on what sort of information you could request.
 
-## What requests have you done?
+* What requests have you done?
 
 At this point, the guide itself is over but I have a bit of a fun story that you might like to use as inspiration yourself. Earlier, I mentioned Section 6 which outlines reasons that agencies can reject your requests. There's a few requests on FYI that have been rejected or redacted under those grounds.
 
@@ -102,5 +102,5 @@ A quick glance tells that the majority of rejected/redacted requests were on the
 
 I'd love to hear what those US Film Industry interactions were about myself. Perhaps with time, I can "FOIA the fuck out of it" to quote a tweet I saw earlier today.
 
-[^1]: [FOIA Sections S6 (a) and S (6) b (i) - fyi.govt.nz](https://fyi.org.nz/request/4578-foia-sections-s6-a-and-s-6-b-i#incoming-14960)
-[^2]: [Withheld / Rejected OIA Filings - fyi.govt.nz](https://fyi.org.nz/request/6763-withheld-rejected-oia-filings#incoming-22439)
+[^1]: [[https://fyi.org.nz/request/4578-foia-sections-s6-a-and-s-6-b-i#incoming-14960][FOIA Sections S6 (a) and S (6) b (i) - fyi.govt.nz]]
+[^2]: [[https://fyi.org.nz/request/6763-withheld-rejected-oia-filings#incoming-22439][Withheld / Rejected OIA Filings - fyi.govt.nz]]
