Fixed up links and some various tweaks

--- a/content-org/CHANGELOG.org
+++ b/content-org/CHANGELOG.org
@@ -7,6 +7,9 @@
 :END:
 
 ** 2020
+*** June
+**** 13th
+- Translated links and code comments within CHANGELOG to valid org-mode equivalents. Besides the actual blog posts which need a review, that should be the last of the static pages fully ported over
 *** May
 **** 24th
 - Ported CHANGELOG to org-mode given it's the perfect layout already
@@ -28,24 +31,24 @@
 *** February
 **** 18th
 
-- Created a proper Now page [»](/now/)
+- Created a proper Now page [[/now/][»]]
 - Published a more minimal version of the site using some older custom styling that I was a bit fond of
 
 **** 17th
 
-- Updated RSS feed to use absolute links rather than relative links. Big thanks to [@zacjszewczyk](https://twitter.com/zacjszewczyk) for pointing it out!
+- Updated RSS feed to use absolute links rather than relative links. Big thanks to [[https://twitter.com/zacjszewczyk][@zacjszewczyk]] for pointing it out!
 
 *** January
 **** 6th
 
-- Wrote a blog post detailing how to create an ssh config file [»](/blog/multiple-git-hosts)
+- Wrote a blog post detailing how to create an ssh config file [[/blog/multiple-git-hosts][»]]
 
 ** 2019
 *** December
 **** 30th
 
 - Ported all posts back to Markdown. Perhaps I'll do a postmortem about what I liked and disliked about Asciidoc since it's really promising but not quite there just yet.
-- Ditched any custom stuff in favour of the `hello-friend` theme
+- Ditched any custom stuff in favour of the ~hello-friend~ theme
 
 **** 24th
 
@@ -67,7 +70,7 @@
 
 **** 12th
 
-- I started experimenting with [Tachyons](https://tachyons.io) again for creating a CSS layout. I really need to stop messing with so many different frameworks...
+- I started experimenting with [[https://tachyons.io][Tachyons]] again for creating a CSS layout. I really need to stop messing with so many different frameworks...
 
 **** 4th
 
@@ -84,7 +87,7 @@
 
 **** 16th
 
-- Added a note about how to find WSL files on Windows 10 [»](/notes/programming/tools/wsl)
+- Added a note about how to find WSL files on Windows 10 [[/notes/programming/tools/wsl][»]]
 
 **** 15th
 
@@ -109,11 +112,11 @@
 
 **** 29th
 
-- Added some tips for getting image metadata and converting SVGs to PNGs [»](/notes/programming/tools/image-conversion)
+- Added some tips for getting image metadata and converting SVGs to PNGs [[/notes/programming/tools/image-conversion][»]]
 
 **** 21st
 
-- Added a tip about automatically importing and/or aliasing modules in IEX [»](/notes/programming/languages/elixir#automatically-aliasing-modules-when-starting-iex)
+- Added a tip about automatically importing and/or aliasing modules in IEX [[/notes/programming/languages/elixir#automatically-aliasing-modules-when-starting-iex][»]]
 
 **** 20th
 
@@ -131,22 +134,22 @@
 **** 27th
 
 - Removed italics to make the site easier to read, and fixed some typos in the email lookup post
-- Added an old review for Yakuza [»](/reviews/yakuza)
-- Cleaned up and added an old post about Deepfakes [»](/blog/deepfakes)
+- Added an old review for Yakuza [[/reviews/yakuza][»]]
+- Cleaned up and added an old post about Deepfakes [[/blog/deepfakes][»]]
 
 **** 26th
 
-- Wrote a blog post about a handy trick I use to look up email addresses that I'm not 100% sure about [»](/blog/email-lookup)
+- Wrote a blog post about a handy trick I use to look up email addresses that I'm not 100% sure about [[/blog/email-lookup][»]]
 
 **** 7th
 
 - Backfilled the changelog some more. Entries mentioned new posts now link to said posts
-- Swapped the (supposedly placeholder) [return symbol (U+23CE)](https://graphemica.com/%E2%8F%8E) being used as a back button for a [circled heavy white rightwards arrow (U+27B2)](https://graphemica.com/%E2%9E%B2). I couldn't find a leftwards version so I just rotated it using some CSS
+- Swapped the (supposedly placeholder) [[https://graphemica.com/%E2%8F%8E][return symbol (U+23CE)]] being used as a back button for a [[https://graphemica.com/%E2%9E%B2][circled heavy white rightwards arrow (U+27B2)]]. I couldn't find a leftwards version so I just rotated it using some CSS
 - Updated some links to be relative, such as the CHANGELOG on the front page which was a link to the live version up until now. Much nicer for working locally.
 
 **** 1st
 
-- Realised I had broken all of the links when porting to Jekyll! Links like `/blog/lore-tabs` now looked like `blog/2018-02-28-lore-tabs`. This wouldn't be such a big deal but I've linked to some posts and I know that searching `arch linux on intel nuc` on Google brings up my post in 3rd place. Hopefully it's useful for some people, despite possibly being a little out of date. It's a handy Arch guide in general I think, since I use it myself. I should write more in depth explainers sometime.
+- Realised I had broken all of the links when porting to Jekyll! Links like ~/blog/lore-tabs~ now looked like ~blog/2018-02-28-lore-tabs~. This wouldn't be such a big deal but I've linked to some posts and I know that searching ~arch linux on intel nuc~ on Google brings up my post in 3rd place. Hopefully it's useful for some people, despite possibly being a little out of date. It's a handy Arch guide in general I think, since I use it myself. I should write more in depth explainers sometime.
 
 *** August
 **** 29th
@@ -160,7 +163,7 @@
 
 **** 19th
 
-- Wrote a post about turning 25. It was mainly just a tangent about what I'd like to do with this site going forward. [»](/blog/25)
+- Wrote a post about turning 25. It was mainly just a tangent about what I'd like to do with this site going forward. [[/blog/25][»]]
 
 **** 6th
 
@@ -169,13 +172,13 @@
 *** July
 **** 29th
 
-- Wrote a post about extracting credentials from Jenkins [»](/blog/retrieving-jenkins-credentials)
+- Wrote a post about extracting credentials from Jenkins [[/blog/retrieving-jenkins-credentials][»]]
 - Removed pagination from the blog list page
 
 **** 20th
 
-- Added [foresty.io](https://forestry.io) configuration again. It wouldn't survive very long.
-- Added a post about fixing an issue with upgrading from WSL v1 to v2. I remember drinking a bit when I finally solved this probably so I drunkly wrote this post too :) [»](/blog/wsl2-vhd-issue)
+- Added [[https://forestry.io][forestry.io]] configuration again. It wouldn't survive very long.
+- Added a post about fixing an issue with upgrading from WSL v1 to v2. I remember drinking a bit when I finally solved this probably so I drunkly wrote this post too :) [[/blog/wsl2-vhd-issue][»]]
 
 *** May
 **** 21st
@@ -186,7 +189,7 @@
 *** March
 **** 21st
 
-- Added a post thinking about the future of emergency services. This would have been shortly after I had been admitted to hospital, if not the same day. [»](/blog/future-of-emergency-services)
+- Added a post thinking about the future of emergency services. This would have been shortly after I had been admitted to hospital, if not the same day. [[/blog/future-of-emergency-services][»]]
 
 **** 18th
 
@@ -199,16 +202,16 @@
 
 **** 10th
 
-- Uploaded `vsreport.html` which was a security review of sorts for a videogame I was playing. I had churned it out like an entire year prior but never hosted it anywhere. I think I was talking to someone about it and wanted to send them a link.
+- Uploaded ~vsreport.html~ which was a security review of sorts for a videogame I was playing. I had churned it out like an entire year prior but never hosted it anywhere. I think I was talking to someone about it and wanted to send them a link.
 
 **** 7th
 
-- Tried out [forestry.io](https://forestry.io) for the first time and quickly discarded it. It's a cool project but I don't have much use for it myself.
+- Tried out [[phttps://forestry.io][forestry.io]] for the first time and quickly discarded it. It's a cool project but I don't have much use for it myself.
 
 **** 3rd
 
-- Wrote my first review in like 2 years. It wasn't a review at all, it was more just me gushing about Battle Angel Alita before the film adaption released. I never did go back and write an actual review... [»](/reviews/battle-angel-alita)
-- Added support for [utteranc.es](https://utteranc.es/), a neat little comment section powered by Github.
+- Wrote my first review in like 2 years. It wasn't a review at all, it was more just me gushing about Battle Angel Alita before the film adaption released. I never did go back and write an actual review... [[/reviews/battle-angel-alita][»]]
+- Added support for [[https://utteranc.es/][utteranc.es]], a neat little comment section powered by Github.
 - Revamed the site to move from tailwind.css to spectre.css
 - Some of the layout changed as a result such as adding opengraph metatags and generally going for a more minimalist approach.
 
@@ -258,19 +261,19 @@
 
 **** 16th
 
-- Fixed a typo in the [lost python results](/blog/lost-python-results) post
+- Fixed a typo in the [[/blog/lost-python-results][lost python results]] post
 
 **** 14th
 
-- Fixed a bug where social media links had mistakenly set a second `href` instead of a `class` attribute
+- Fixed a bug where social media links had mistakenly set a second ~href~ instead of a ~class~ attribute
 
 **** 13th
 
-- Update [arch nuc install](/blog/arch-nuc-install) and [lost python results](/blog/lost-python-results) posts to use hugo's syntax highlighting shortcode
+- Update [[/blog/arch-nuc-install][arch nuc install]] and [[/blog/lost-python-results][lost python results]] posts to use hugo's syntax highlighting shortcode
 
 **** 12th
 
-- Wrote a post about the `-` operator in Python [»](/blog/lost-python-results)
+- Wrote a post about the ~-~ operator in Python [[/blog/lost-python-results][»]]
 
 **** 8th
 
@@ -279,15 +282,15 @@
 
 **** 7th
 
-- Ported site from [Pelican](https://blog.getpelican.com/) to [Hugo](https://gohugo.io/)
+- Ported site from [[https://blog.getpelican.com/][Pelican]] to [[https://gohugo.io/][Hugo]]
 
 **** 6th
 
-- Swap out [pipenv](https://github.com/pypa/pipenv) for [Poetry](https://github.com/sdispater/poetry)
+- Swap out [[https://github.com/pypa/pipenv][pipenv]] for [[https://github.com/sdispater/poetry][Poetry]]
 
 **** 3rd
 
-- Added post about Twitter automation [»](/blog/automation-right)
+- Added post about Twitter automation [[/blog/automation-right][»]]
 
 *** November
 **** 28th
@@ -311,7 +314,7 @@
 **** 14th
 
 - Added a contact form powered by Netlify
-- Changed from [Tachyons](https://tachyons.io/) to [Tailwind CSS](https://tailwindcss.com/)
+- Changed from [[https://tachyons.io/][Tachyons]] to [[https://tailwindcss.com/][Tailwind CSS]]
 
 **** 7th
 
@@ -319,7 +322,7 @@
 
 **** 5th
 
-- Ported from Flask app to [Pelican](https://blog.getpelican.com/)
+- Ported from Flask app to [[https://blog.getpelican.com/][Pelican]]
 
 *** August
 **** 25th
@@ -329,7 +332,7 @@
 
 **** 20th
 
-- Fixed `strftime` bug in the site footer
+- Fixed ~strftime~ bug in the site footer
 
 **** 19th
 
@@ -339,7 +342,7 @@
 
 **** 18th
 
-- Added a post about submitting Official Information Act requests in New Zealand [»](/blog/nz-oia-guide)
+- Added a post about submitting Official Information Act requests in New Zealand [[/blog/nz-oia-guide][»]]
 - Added Google Analytics
 - Fixed sorting to show posts in reverse order
 
@@ -349,14 +352,14 @@
 
 **** 15th
 
-- Added redirect from my old URL `thingsima.de` to `utf9k.net`
+- Added redirect from my old URL ~thingsima.de~ to ~utf9k.net~
 - Added page for showing personal stats
 
 **** 12th
 
 - Added section to footer that fetches and shows the latest commit for the site
 - General style changes
-- nginx change for rewriting `https://www.utf9k.net -> https://utf9k.net`
+- nginx change for rewriting ~https://www.utf9k.net -> https://utf9k.net~
 
 **** 11th
 
@@ -372,13 +375,13 @@
 **** 10th
 
 - Added README
-- Added placeholder keys for `giantbomb`, `howlongtobeat` and `steam`
+- Added placeholder keys for ~giantbomb~, ~howlongtobeat~ and ~steam~
 - CSS changes to better suit mobile devices
 
 **** 6th
 
-- Moved from [Tachyons](https://tachyons.io/) to [Spectre CSS](https://picturepan2.github.io/spectre/)
-- Changed from [pipenv](https://github.com/pypa/pipenv) to a generic virtual environment
+- Moved from [[https://tachyons.io/][Tachyons]] to [[https://picturepan2.github.io/spectre/][Spectre.css]]
+- Changed from [[https://github.com/pypa/pipenv][pipenv]] to a generic virtual environment
 
 *** April
 **** 8th
@@ -427,7 +430,7 @@
 
 **** 1st
 
-- Added a new post called "Humans don't come with lore tabs" [»](/blog/humans-dont-come-with-lore-tabs)
+- Added a new post called "Humans don't come with lore tabs" [[/blog/humans-dont-come-with-lore-tabs][»]]
 
 *** February
 **** 18th
@@ -442,18 +445,18 @@
 
 **** 12th
 
-- Churned out a blog post before starting my first day at Xero [»](/blog/day-xero)
+- Churned out a blog post before starting my first day at Xero [[/blog/day-xero][»]]
 
 **** 10th
 
 - Added some custom CSS sizing for the stats page
-- Added some CSS for pygments pulled from an Oceanic Next stylesheet [»](https://github.com/wbinnssmith/base16-oceanic-next/blob/master/pygments/base16-oceanicnext.dark.css)
+- Added some CSS for pygments pulled from an Oceanic Next stylesheet [[https://github.com/wbinnssmith/base16-oceanic-next/blob/master/pygments/base16-oceanicnext.dark.css][»]]
 - Extended mistune's renderer to parse blockquotes and code snippets within Markdown
 
 **** 8th
 
 - Messed with stats page styling a bunch
-- Normalised all URLs to be eg; `/blog/` instead of `/blog`
+- Normalised all URLs to be eg; ~/blog/~ instead of ~/blog~
 
 **** 6th
 
@@ -462,12 +465,12 @@
 **** 5th
 
 - Applied Pycharm auto formatting to the repo which, in hindsight, destroyed the layout of the main app.py file. I always wondered what had reduced it into a one line view within Github!
-- Changed static file URLs to start from the root eg; `/static/style.css` became `/style.css`.
-- Polished off a post about Deepfakes [»](/blog/deepfakes)
+- Changed static file URLs to start from the root eg; ~/static/style.css~ became ~/style.css~.
+- Polished off a post about Deepfakes [[/blog/deepfakes][»]]
 
 **** 4th
 
-- Added a `manifest.json`
+- Added a ~manifest.json~
 - Rearranged parts of the Deepfakes post I was in the process of writing
 - Added an indicator for whether a post was safe for work or not
 
@@ -498,7 +501,7 @@
 
 **** 26th
 
-- I believe until this point, I had been writing a lot of closures for the stats portion of the site. I started writing some classes, for the sake of having classes, likely because I had seen them used in Django a bunch. Looking back, it's funny to me that I had a file called `classes.py`!
+- I believe until this point, I had been writing a lot of closures for the stats portion of the site. I started writing some classes, for the sake of having classes, likely because I had seen them used in Django a bunch. Looking back, it's funny to me that I had a file called ~classes.py~!
 
 **** 21st
 
@@ -518,7 +521,7 @@
 
 **** 4th
 
-- Added functionality to pull recently watched movies and TV shows from [Trakt.tv](https://trakt.tv), every 30 minutes.
+- Added functionality to pull recently watched movies and TV shows from [[https://trakt.tv][Trakt.tv]], every 30 minutes.
 
 **** 3rd
 
@@ -550,7 +553,7 @@
 
 **** 20th
 
-- Committed some dependencies that were missing from `requirements.txt`
+- Committed some dependencies that were missing from ~requirements.txt~
 
 **** 19th
 
@@ -601,7 +604,7 @@
 *** October
 **** 29th
 
-- Updated `requirements.txt` to reflect the current requirements to run the site
+- Updated ~requirements.txt~ to reflect the current requirements to run the site
 
 **** 28th
 
@@ -626,7 +629,7 @@
 **** 24th
 
 - Added escaping for markdown posts
-- Added some CSS that extended off of [Tachyons](https://tachyons.io/)
+- Added some CSS that extended off of [[https://tachyons.io/][Tachyons]]
 
 **** 23rd
 
