--- a/content-org/notes/books.org
+++ b/content-org/notes/books.org
@@ -4,9 +4,9 @@
 #+roam_tag: books
 
 * 2019
-[[file:the_phoenix_project.org][The Phoenix Project]]
-[[file:the_unicorn_project.org][The Unicorn Project]]
+- [[file:the_phoenix_project.org][The Phoenix Project]]
+- [[file:the_unicorn_project.org][The Unicorn Project]]
 * 2020
-[[file:the_information_diet.org][The Information Diet: A Case for Conscious Consumption]]
-[[file:the_inner_game_of_tennis.org][The Inner Game of Tennis]]
-[[file:why_i_write.org][Why I Write]]
+- [[file:the_information_diet.org][The Information Diet: A Case for Conscious Consumption]]
+- [[file:the_inner_game_of_tennis.org][The Inner Game of Tennis]]
+- [[file:why_i_write.org][Why I Write]]
